[project]
name = "Nasa.py"
description = "A python API wrapper for the NASA API"
readme = "README.md"
authors = [
    {name = "Snipy7374", email="snipy7374@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["Nasa", "Nasa.py", "Nasa API"]
license = {text = "MIT"}
dynamic = ["version", "dependencies"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "nasa.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.pyright]
typeCheckingMode = "strict"
reportInvalidStringEscapeSequence = false
reportUnusedImport = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportUnnecessaryIsInstance = false

[tool.towncrier]
package = "nasa"
directory = "changelogs/"
filename = "docs/source/whats_new.rst"
issue_format = ":issue:`{issue}`"
underlines = "-~"
start_string = ".. towncrier release notes start\n"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecate"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "New Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true