[project]
name = "nasasync"
description = "A python API wrapper for the NASA API"
readme = "README.md"
authors = [
    {name = "Snipy7374", email="snipy7374@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["Nasa", "Nasa.py", "Nasa API"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
license = {text = "MIT"}
dynamic = ["version", "dependencies", "optional-dependencies"]


[project.urls]
"documentation" = "https://nasapy-a-nasa-api-python-wrapper.readthedocs.io/en/latest/index.html"
"changelog" = "https://nasapy-a-nasa-api-python-wrapper.readthedocs.io/en/beta/whats_new.html"
"repository" = "https://github.com/Snipy7374/nasa.py"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["nasa"]


[tool.setuptools.dynamic]
version = {attr = "nasa.__version__"}
dependencies = {file = ["requirements.txt"]}


[tool.pyright]
typeCheckingMode = "strict"
reportInvalidStringEscapeSequence = false
reportUnusedImport = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportUnnecessaryIsInstance = false


[tool.towncrier]
package = "nasa"
directory = "changelogs/"
filename = "docs/source/whats_new.rst"
issue_format = ":issue:`{issue}`"
underlines = "-~"
start_string = ".. towncrier release notes start\n"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking Changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "deprecate"
    name = "Deprecations"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "New Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "doc"
    name = "Documentation"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "misc"
    name = "Miscellaneous"
    showcontent = true